# DE-CODED-3

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  settings.py
DE-CODED-3--backup.git/: config
backend/: check_indexes.py  embeddings.py  image_processor.py  manipulation_detector.py  pinecone_client.py  requirements.txt  scoring_engine.py  seed_sample_data.py  server.py  verification_pipeline.py  vlm_verifier.py
database/: mongo.py  pinecone.py
database/schema/: models.py
lib/: image_processor.py  manipulation_detector.py  verification_pipeline.py  vlm_verifier.py
routes/: ingest.py  review.py  status.py  system.py
services/: embedding.py  scoring.py
tests/: unit.py
utils/: logger.py
